--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
                                     class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
                         <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
-                        <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
+                        <li class="nav-item"><a href="career.html" class="nav-link">career</a></li>
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
                         <li class="nav-item"><a href="guiding-minds.html" class="nav-link">guiding minds</a></li>
+                        <li class="nav-item"><a href="fee.html" class="nav-link">fee</a></li>
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
@@ -85,16 +86,33 @@
     </header>
     <main>
         <section class="hero-section">
+            <div class="video-wrapper">
+                <video class="bg-video__content" autoplay="" muted="" loop="">
+                    <source src="video/lumina-terra-01.mp4" type="video/mp4">
+                    <!-- <source src="video/bg-video.mp4" type="video/webm"> -->
+                    Sorry your browser does not supported!
+                </video>
+            </div>
             <div class="container">
                 <div class="hero-grid">
                     <div class="hero-grid-item">
                         <div class="content-wrapper">
+                            <span class="rouded">A Rounded Education</span>
                             <h1>LUMINA <span>TERRA</span></h1>
                             <h2>school of nations</h2>
-                            <h4>Upcoming K12 School | Phase 1 (2025): 2–10 Year Olds (Playgroup–Grade 5) CBSE K12 & IB
-                                DP (Grades 11 & 12) Coming Soon</h4>
-                            <a href="contact-us.html">BOOK ONLINE COUNSELLING</a>
+                            <h4>2-10 Year Olds 
+                                <br>Future CBSE K12 & IB
+                            </h4>
+                            <h5>
+                                <span> Exclusive</span><span>Innovative</span><span>Sustainable</span>
+                            </h5>
+                            <!-- <a href="contact-us.html">BOOK ONLINE COUNSELLING</a> -->
                         </div>
+                    </div>
+                    <div class="hero-grid-item">
+                        <!-- <div class="img-wrapper">
+                            <img src="images/hero-student-01.jpg" alt="" class="img-fluid">
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -165,11 +183,12 @@
                 </div>
             </div>
         </section>
-        <section class="leaf-hold p-top p-bottom">
+        <section class="leaf-hold bg-1 p-top p-bottom">
             <div class="container">
                 <div class="row">
                     <div class="col-md-9 mx-auto">
-                        <h2 class="heading-primary text-center">“At Lumina Terra, questions matter more than answers—and
+                        <h2 class="heading-primary text-center text-white">“At Lumina Terra, questions matter more than
+                            answers—and
                             wonder is the curriculum.”</h2>
                     </div>
                 </div>
@@ -177,7 +196,7 @@
         </section>
         <section class="signature-strength p-top p-bottom">
             <div class="container">
-                <h2 class="heading-primary">Signature Strengths</h2>
+                <h2 class="heading-primary text-center">Signature Strengths</h2>
                 <div class="border-one"></div>
                 <div class="col-md-10 mx-auto">
                     <div class="content-para text-center">
@@ -273,18 +292,22 @@
                 <h2 class="heading-primary">Accelerated Learning & Technology</h2>
                 <div class="border-one"></div>
                 <ul class="primary-list">
-                    <li>Modern technology supports accelerated learning: coding labs, robotics, digital portfolios, interactive whiteboards</li>
-                    <li>Adaptive tools and personalized pathways help children master concepts deeply and move ahead naturally</li>
+                    <li>Modern technology supports accelerated learning: coding labs, robotics, digital portfolios,
+                        interactive whiteboards</li>
+                    <li>Adaptive tools and personalized pathways help children master concepts deeply and move ahead
+                        naturally</li>
                     <li>Early exposure to coding, digital citizenship, and real-world problem-solving</li>
-                    <li>Inspired by the best international systems: Singapore’s math mastery, Finland’s play and well-being focus, Norway’s inclusion, IB’s inquiry, and more</li>
+                    <li>Inspired by the best international systems: Singapore’s math mastery, Finland’s play and
+                        well-being focus, Norway’s inclusion, IB’s inquiry, and more</li>
                 </ul>
             </div>
         </section>
-        <section class="leaf-hold p-top p-bottom">
+        <section class="leaf-hold bg-1 p-top p-bottom">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 mx-auto">
-                        <h2 class="heading-primary text-center">“Connection before correction. We raise children who
+                        <h2 class="heading-primary text-center text-white">“Connection before correction. We raise
+                            children who
                             feel seen, heard, and valued.”</h2>
                     </div>
                 </div>
@@ -305,37 +328,84 @@
             </div>
         </section>
     </main>
-    <footer class="p-top p-bottom">
+    <footer class="p-top">
         <div class="container">
-            <div class="footer-logo">
-                <img src="images/logo.png" alt="" class="img-flui">
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="footer-logo">
+                        <img src="images/logo.png" alt="" class="img-flui">
+                    </div>
+                    <div class="footer-text">
+                        <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in
+                            nature-rich
+                            spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers
+                            alike.
+                            It’s education that grows with them — relevant, real, and rooted.</p>
+                    </div>
+                    <div class="footer-links">
+                        <ul>
+                            <li><a href="admission.html">Admissions</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <h4 class="footer-widgets">quick links</h4>
+                    <ul class="footer-links">
+                        <li><a href="index.html">home</a></li>
+                        <li><a href="about-us.html">about us</a></li>
+                        <li><a href="program.html">program</a></li>
+                        <li><a href="career.html">career</a></li>
+                        <li><a href="guiding-minds.html">guiding minds</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <ul class="footer-contact">
+                        <li class="footer-contact-item">
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-map-marker-alt"></i>
+                            </span>
+                            <span class="footer-contact-text">Next to Omaxe Palace, Opp. Palassio Mall, Lucknow</span>
+
+                        </li>
+                        <li class="footer-contact-item">
+
+
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-phone"></i> </span>
+                            <span class="footer-contact-text"><a href="tel:+917408405000">+91-740 840
+                                    5000</a></span>
+                        </li>
+                        <li class="footer-contact-item">
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-envelope"></i> </span>
+                            <span class="footer-contact-text"><a
+                                    href="mailto:info@luminaterra.org">info@luminaterra.org</a></span>
+                        </li>
+                    </ul>
+                    <div class="footer-social">
+                        <ul>
+                            <li><a href="" target="_blank" style="--fclr:#557dbc;">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a></li>
+                            <li class="whtap"><a href="https://wa.me/917408405000" target="_blank"
+                                    style="--fclr:#29a71a;">
+                                    <i class="fa-brands fa-whatsapp"></i>
+                                </a></li>
+                            <li><a href="" target="_blank" style="--fclr:#03a9f4;">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a></li>
+                            <li><a href="" target="_blank"
+                                    style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="footer-text">
-                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich
-                    spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike.
-                    It’s education that grows with them — relevant, real, and rooted.</p>
-            </div>
-            <div class="footer-links">
-                <ul>
-                    <li><a href="admission.html">Admissions</a></li>
-                    <li><a href="contact-us.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-social">
-                <ul>
-                    <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a></li> -->
-                    <li><a href="https://wa.me/917408405000" target="_blank" style="--fclr:#29a71a;">
-                            <i class="fa-brands fa-whatsapp"></i>
-                        </a></li>
-                    <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a></li>
-                    <li><a href="" target="_blank" style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a></li> -->
-                </ul>
+        </div>
+        <div class="bottom-footer m-top">
+            <div class="container">
+                <p>© 2025 by Lumina Terra School of Nations | <a href="terms-of-use.html">Terms of Use</a> | <a href="privacy-policy.html">Privacy Policy</a></p>
             </div>
         </div>
     </footer>
