--- a/why-lumina.html
+++ b/why-lumina.html
@@ -36,9 +36,10 @@
                                     class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
                         <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
-                        <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
+                        <li class="nav-item"><a href="career.html" class="nav-link">career</a></li>
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
                         <li class="nav-item"><a href="guiding-minds.html" class="nav-link">guiding minds</a></li>
+                        <li class="nav-item"><a href="fee.html" class="nav-link">fee</a></li>
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
@@ -92,7 +93,7 @@
                     <div class="col-md-7">
                         <h2 class="heading-primary">our educational model is designed for the 21st century</h2>
                         <div class="content-para">
-                            <p>The <a href="flm.html" target="_blank" class="internal-link">Future Learning Model
+                            <p>The <a href="flm.html" target="_blank" class="internal-link text-white">Future Learning Model
                                     (FLM)</a> is an overarching approach and framework for learning and teaching,
                                 encompassing nine key elements. These elements describe the type of learning that we
                                 value and develop throughout all our school stages and programmes.</p>
@@ -221,23 +222,41 @@
                 </h2>
                 <div class="border-one"></div>
                 <ul class="primary-list">
-                    <li><strong>Truly individualized learning:</strong> Each child’s path is personalized, adaptive, and mastery-based,
-                        enabling natural acceleration up to two grades ahead</li>
-                    <li><strong>Holistic development:</strong> Academics, arts, life skills, well-being, and global citizenship are woven
-                        together daily.</li>
-                    <li><strong>No-bag, joyful learning:</strong> All materials are provided; learning is hands-on, project-based, and
-                        deeply engaging.</li>
-                    <li><strong>Small class sizes:</strong> Every child is known, valued, and celebrated.</li>
-                    <li><strong>Innovative, evidence-based teaching:</strong> Blending global best practices with Indian values and local
-                        context.</li>
-                    <li><strong>Real-world skills:</strong> Financial literacy, coding, public speaking, teamwork, and leadership are
-                        built in from the start.</li>
-                    <li><strong>Community and celebration:</strong> Regular events, performances, and exhibitions connect learning to
-                        life.</li>
-                    <li><strong>Diversity and inclusion:</strong> Children learn with and from peers of all backgrounds, preparing them
-                        for a connected world.</li>
-                    <li><strong>Future-ready:</strong> Focus on digital literacy, critical thinking, and adaptability for success in
-                        exams, careers, and life.</li>
+                    <li>Truly individualized learning 
+                        <!-- Each child’s path is personalized, adaptive, and mastery-based,
+                        enabling natural acceleration up to two grades ahead -->
+                    </li>
+                    <li>Holistic development 
+                        <!-- Academics, arts, life skills, well-being, and global citizenship are woven
+                        together daily. -->
+                    </li>
+                    <li>No-bag, joyful learning 
+                        <!-- All materials are provided; learning is hands-on, project-based, and
+                        deeply engaging. -->
+                    </li>
+                    <li>Small class sizes 
+                        <!-- Every child is known, valued, and celebrated. -->
+                    </li>
+                    <li>Innovative, evidence-based teaching 
+                        <!-- Blending global best practices with Indian values and local
+                        context. -->
+                    </li>
+                    <li>Real-world skills 
+                        <!-- Financial literacy, coding, public speaking, teamwork, and leadership are
+                        built in from the start. -->
+                    </li>
+                    <li>Community and celebration 
+                        <!-- Regular events, performances, and exhibitions connect learning to
+                        life. -->
+                    </li>
+                    <li>Diversity and inclusion 
+                        <!-- Children learn with and from peers of all backgrounds, preparing them
+                        for a connected world. -->
+                    </li>
+                    <li>Future-ready 
+                        <!-- Focus on digital literacy, critical thinking, and adaptability for success in
+                        exams, careers, and life. -->
+                    </li>
                 </ul>
             </div>
         </section>
@@ -246,51 +265,112 @@
                 <h2 class="heading-primary text-center">How Lumina Terra Integrates Global Best Practices</h2>
                 <div class="border-one"></div>
                 <ul class="primary-list">
-                    <li><strong>Curriculum draws from Singapore’s math mastery, Finland’s play and well-being focus, Norway’s inclusion, IB’s inquiry, and more12.</strong></li>
-                    <li><strong>Blended learning methods:</strong> Combining Montessori, Reggio Emilia, and Waldorf approaches for child-led, creative, and holistic growth3.</li>
-                    <li><strong>STEAM and ESTEAM:</strong> Science, Technology, Engineering, Arts, Math, and Entrepreneurship are integrated at every stage.</li>
-                    <li><strong>Learning Lounges:</strong> Age-appropriate, flexible environments inspired by global “learning lounge” models, supporting independence and curiosity.</li>
-                    <li><strong>Guided by global experts:</strong> The international advisory committee ensures the curriculum is always evolving and benchmarked against the world’s best.</li>
-                    <li><strong>Socratic discussions and project-based learning:</strong> Fostering critical thinking, independence, and lifelong curiosity.</li>
-                    <li><strong>Personalized, self-paced learning:</strong> Adaptive technology and mastery-based progression for every learner.</li>
-                    <li><strong>Active, engaged learning:</strong> Emphasis on real-world challenges, hands-on projects, and collaborative problem-solving.</li>
+                    <li>World‑class curriculum: <br>mastery, joy, equity & inquiry</li>
+                    <li>Blended learning methods 
+                        <!-- Combining Montessori, Reggio Emilia, and Waldorf approaches for child-led, creative, and holistic growth3. -->
+                    </li>
+                    <li>STEAM and ESTEAM 
+                        <!-- Science, Technology, Engineering, Arts, Math, and Entrepreneurship are integrated at every stage. -->
+                    </li>
+                    <li>Learning Lounges 
+                        <!-- Age-appropriate, flexible environments inspired by global “learning lounge” models, supporting independence and curiosity. -->
+                    </li>
+                    <li>Guided by global experts 
+                        <!-- The international advisory committee ensures the curriculum is always evolving and benchmarked against the world’s best. -->
+                    </li>
+                    <li>Socratic discussions and <br>project-based learning 
+                        <!-- Fostering critical thinking, independence, and lifelong curiosity. -->
+                    </li>
+                    <li>Personalized, self-paced learning 
+                        <!-- Adaptive technology and mastery-based progression for every learner. -->
+                    </li>
+                    <li>Active, engaged learning 
+                        <!-- Emphasis on real-world challenges, hands-on projects, and collaborative problem-solving. -->
+                    </li>
 
                 </ul>
             </div>
         </section>
     </main>
 
-    <footer class="p-top p-bottom">
+     <footer class="p-top">
         <div class="container">
-            <div class="footer-logo">
-                <img src="images/logo.png" alt="" class="img-flui">
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="footer-logo">
+                        <img src="images/logo.png" alt="" class="img-flui">
+                    </div>
+                    <div class="footer-text">
+                        <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in
+                            nature-rich
+                            spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers
+                            alike.
+                            It’s education that grows with them — relevant, real, and rooted.</p>
+                    </div>
+                    <div class="footer-links">
+                        <ul>
+                            <li><a href="admission.html">Admissions</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <h4 class="footer-widgets">quick links</h4>
+                    <ul class="footer-links">
+                        <li><a href="index.html">home</a></li>
+                        <li><a href="about-us.html">about us</a></li>
+                        <li><a href="program.html">program</a></li>
+                        <li><a href="career.html">career</a></li>
+                        <li><a href="guiding-minds.html">guiding minds</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <ul class="footer-contact">
+                        <li class="footer-contact-item">
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-map-marker-alt"></i>
+                            </span>
+                            <span class="footer-contact-text">Next to Omaxe Palace, Opp. Palassio Mall, Lucknow</span>
+
+                        </li>
+                        <li class="footer-contact-item">
+
+
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-phone"></i> </span>
+                            <span class="footer-contact-text"><a href="tel:+917408405000">+91-740 840
+                                    5000</a></span>
+                        </li>
+                        <li class="footer-contact-item">
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-envelope"></i> </span>
+                            <span class="footer-contact-text"><a
+                                    href="mailto:info@luminaterra.org">info@luminaterra.org</a></span>
+                        </li>
+                    </ul>
+                    <div class="footer-social">
+                        <ul>
+                            <li><a href="" target="_blank" style="--fclr:#557dbc;">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a></li>
+                            <li class="whtap"><a href="https://wa.me/917408405000" target="_blank"
+                                    style="--fclr:#29a71a;">
+                                    <i class="fa-brands fa-whatsapp"></i>
+                                </a></li>
+                            <li><a href="" target="_blank" style="--fclr:#03a9f4;">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a></li>
+                            <li><a href="" target="_blank"
+                                    style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="footer-text">
-                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich
-                    spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike.
-                    It’s education that grows with them — relevant, real, and rooted.</p>
-            </div>
-            <div class="footer-links">
-                <ul>
-                    <li><a href="admission.html">Admissions</a></li>
-                    <li><a href="contact-us.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-social">
-                <ul>
-                    <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a></li> -->
-                    <li><a href="https://wa.me/917408405000" target="_blank" style="--fclr:#29a71a;">
-                            <i class="fa-brands fa-whatsapp"></i>
-                        </a></li>
-                    <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a></li>
-                    <li><a href="" target="_blank" style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a></li> -->
-                </ul>
+        </div>
+        <div class="bottom-footer m-top">
+            <div class="container">
+                <p>© 2025 by Lumina Terra School of Nations | <a href="terms-of-use.html">Terms of Use</a> | <a href="privacy-policy.html">Privacy Policy</a></p>
             </div>
         </div>
     </footer>
