--- a/guiding-minds.html
+++ b/guiding-minds.html
@@ -37,9 +37,10 @@
                                     class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
                         <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
-                        <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
+                        <li class="nav-item"><a href="career.html" class="nav-link">career</a></li>
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
                         <li class="nav-item"><a href="guiding-minds.html" class="nav-link">guiding minds</a></li>
+                        <li class="nav-item"><a href="fee.html" class="nav-link">fee</a></li>
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
@@ -59,7 +60,7 @@
                     <div class="col-md-4">
                         <div class="mCard">
                             <div class="mTeam">
-                                <img src="images/team/management/sunita-gandhi-01.jpg" alt="" class="img-fluid">
+                                <img src="images/team/management/sunita-gandhi-01.png" alt="" class="img-fluid">
                                 <div class="mProfile">
                                     <div class="name">dr. sunita gandhi</div>
                                     <div class="desig">our director</div>
@@ -73,7 +74,7 @@
                     <div class="col-md-4">
                         <div class="mCard">
                             <div class="mTeam">
-                                <img src="images/team/management/drbharti.jpg" alt="" class="img-fluid">
+                                <img src="images/team/management/drbharti.png" alt="" class="img-fluid">
                                 <div class="mProfile">
                                     <div class="name">dr. Bharti gandhi</div>
                                     <div class="desig">our Mentor</div>
@@ -87,7 +88,7 @@
                     <div class="col-md-4">
                         <div class="mCard">
                             <div class="mTeam">
-                                <img src="images/team/management/BittoAgarwal.jpg" alt="" class="img-fluid">
+                                <img src="images/team/management/robert-01.png" alt="" class="img-fluid">
                                 <div class="mProfile">
                                     <div class="name">Robert Gandhi</div>
                                     <div class="desig">&nbsp;</div>
@@ -103,50 +104,120 @@
         </section>
         <section class="advisoryboard m-top m-bottom">
             <div class="container">
-                <h2 class="heading-primary">Meet Our Advisory Board</h2>
+                <h2 class="heading-primary">Meet Our Galvanizers</h2>
                 <div class="border-one"></div>
-                <div class="col-md-3">
-                    <div class="advisory-members">
-                        <div class="img-wrapper">
-                            <img src="images/visionaries/aditya01.jpg" alt="" class="img-fluid">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="advisory-members">
+                            <div class="img-wrapper">
+                                <img src="images/team/galvanizer/Priya.png" alt="" class="img-fluid">
+                            </div>
+                            <h4 class="heading-tertiary">Ms Priya Chhatrawal</h4>
+                            <h6 class="designation">Principal (Junior Wing)</h6>
                         </div>
-                         <h4 class="heading-tertiary">Aditya Sarin</h4>
-                         <h6 class="designation">Ministry of Education and Sports, Spain</h6>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="advisory-members">
+                            <div class="img-wrapper">
+                                <img src="images/team/galvanizer/Komal-Masih.png" alt="" class="img-fluid">
+                            </div>
+                            <h4 class="heading-tertiary">Ms Komal Masih</h4>
+                            <h6 class="designation">Galvanizer</h6>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="advisory-members">
+                            <div class="img-wrapper">
+                                <img src="images/team/galvanizer/Aarti.png" alt="" class="img-fluid">
+                            </div>
+                            <h4 class="heading-tertiary">Ms Arti Mishra</h4>
+                            <h6 class="designation">Galvanizer</h6>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <footer class="p-top p-bottom">
+    <footer class="p-top">
         <div class="container">
-            <div class="footer-logo">
-                <img src="images/logo.png" alt="" class="img-flui">
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="footer-logo">
+                        <img src="images/logo.png" alt="" class="img-flui">
+                    </div>
+                    <div class="footer-text">
+                        <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in
+                            nature-rich
+                            spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers
+                            alike.
+                            It’s education that grows with them — relevant, real, and rooted.</p>
+                    </div>
+                    <div class="footer-links">
+                        <ul>
+                            <li><a href="admission.html">Admissions</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <h4 class="footer-widgets">quick links</h4>
+                    <ul class="footer-links">
+                        <li><a href="index.html">home</a></li>
+                        <li><a href="about-us.html">about us</a></li>
+                        <li><a href="program.html">program</a></li>
+                        <li><a href="career.html">career</a></li>
+                        <li><a href="guiding-minds.html">guiding minds</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <ul class="footer-contact">
+                        <li class="footer-contact-item">
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-map-marker-alt"></i>
+                            </span>
+                            <span class="footer-contact-text">Next to Omaxe Palace, Opp. Palassio Mall, Lucknow</span>
+
+                        </li>
+                        <li class="footer-contact-item">
+
+
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-phone"></i> </span>
+                            <span class="footer-contact-text"><a href="tel:+917408405000">+91-740 840
+                                    5000</a></span>
+                        </li>
+                        <li class="footer-contact-item">
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-envelope"></i> </span>
+                            <span class="footer-contact-text"><a
+                                    href="mailto:info@luminaterra.org">info@luminaterra.org</a></span>
+                        </li>
+                    </ul>
+                    <div class="footer-social">
+                        <ul>
+                            <li><a href="" target="_blank" style="--fclr:#557dbc;">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a></li>
+                            <li class="whtap"><a href="https://wa.me/917408405000" target="_blank"
+                                    style="--fclr:#29a71a;">
+                                    <i class="fa-brands fa-whatsapp"></i>
+                                </a></li>
+                            <li><a href="" target="_blank" style="--fclr:#03a9f4;">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a></li>
+                            <li><a href="" target="_blank"
+                                    style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="footer-text">
-                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike. It’s education that grows with them — relevant, real, and rooted.</p>
-            </div>
-            <div class="footer-links">
-                <ul>
-                    <li><a href="admission.html">Admissions</a></li>
-                    <li><a href="contact-us.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-social">
-                 <ul>
-                    <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a></li> -->
-                    <li><a href="https://wa.me/917408405000" target="_blank" style="--fclr:#29a71a;">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a></li>
-                    <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a></li>
-                    <li><a href="" target="_blank" style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a></li> -->
-                </ul>
+        </div>
+        <div class="bottom-footer m-top">
+            <div class="container">
+                <p>© 2025 by Lumina Terra School of Nations | <a href="terms-of-use.html">Terms of Use</a> | <a
+                        href="privacy-policy.html">Privacy Policy</a></p>
             </div>
         </div>
     </footer>
