--- a/program.html
+++ b/program.html
@@ -36,9 +36,10 @@
                                     class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
                         <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
-                        <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
+                        <li class="nav-item"><a href="career.html" class="nav-link">career</a></li>
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
                         <li class="nav-item"><a href="guiding-minds.html" class="nav-link">guiding minds</a></li>
+                        <li class="nav-item"><a href="fee.html" class="nav-link">fee</a></li>
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
@@ -66,14 +67,15 @@
             <div class="container">
                 <div class="row">
                     <div id="awesome_tab">
-                        <div class="tab_header p-bottom">
-                            <div class="item active" data-option="1">Dawn <span>Ages 2 &dash; 4</span></div>
-                            <div class="item" data-option="2">Ray <span>Ages 5 &dash; 7</span></div>
-                            <div class="item" data-option="3">Glow <span>Ages 8 &dash; 10</span></div>
-                            <div class="item" data-option="4">Flare <span>Ages 11 &dash; 12</span></div>
-                            <div class="item" data-option="5">Aurora <span>Ages 13 &dash; 14</span></div>
-                            <div class="item" data-option="6">Zenith <span>Ages 15 &dash; 16</span></div>
-                            <div class="item" data-option="7">Cosmos <span>Ages 17 &dash; 18</span></div>
+                        <div class="tab_header p-bottom p-top">
+                            <div class="item active" data-option="1">Glow <span>Under Ages 3</span></div>
+                            <div class="item" data-option="2">Spark <span>Ages 4 &dash; 5</span></div>
+                            <div class="item" data-option="3">Ray <span>Ages 6 &dash; 7</span></div>
+                            <div class="item" data-option="4">Beam <span>Ages 8 &dash; 9</span></div>
+                            <div class="item" data-option="5">Flare <span>Ages 10 &dash; 11</span></div>
+                            <div class="item" data-option="6">Nova <span>Ages 12 &dash; 13</span></div>
+                             <div class="item" data-option="7">Orbit <span>Ages 14 &dash; 15</span></div>
+                            <div class="item" data-option="8">Cosmos <span>Ages 16 &dash; 17</span></div>
                         </div>
                         <div class="tab_container p-top p-bottom">
 
@@ -89,8 +91,8 @@
                                             <li>Social-emotional foundations: empathy, gratitude, sharing, circle time</li>
                                         </ul>
                                         <blockquote class="blockquote">
-                                            The roots of education are bitter, but the fruit is sweet.
-                                            <em>Aristotle</em>
+                                            The first glimmrer of being-inner light 
+awakening with wonder and presence
                                         </blockquote>
                                     </div>
                                 </div>
@@ -107,7 +109,10 @@
                                             <li>Life skills: baking, sewing, organizing, financial sense</li>
                                             <li>Community engagement and celebration of learning</li>
                                         </ul>
-                                        <blockquote>Education is the key to unlock the golden door of freedom.<em>George Washington Carver</em></blockquote>
+                                        <blockquote>
+                                            Emergence of vibrant curiosity-light 
+begins to play, explore, and connect
+                                        </blockquote>
                                     </div>
                                     
                                 </div>
@@ -124,7 +129,10 @@
                                             <li>Adventure and service: volunteering, community projects</li>
                                             <li>Maker spaces: 3D printing, film-making, design challenges</li>
                                         </ul>
-                                        <blockquote>The mind is not a vessel to be filled, but a fire to be kindled.<em>Plutarch</em></blockquote>
+                                        <blockquote>
+                                            Light takes direction-curiosity 
+sharpens, ideas begin to take form
+                                        </blockquote>
                                     </div>
                                 </div>
                             </div>
@@ -140,7 +148,10 @@
                                             <li>Arts, drama, and performance; science and entrepreneurship clubs</li>
                                             <li>Social responsibility and service learning</li>
                                         </ul>
-                                        <blockquote>Education is the passport to the future, for tomorrow belongs to those who prepare for it today.<em>Malcolm X</em></blockquote>
+                                        <blockquote>
+                                            Expression deepens-thoughts become 
+focused, confident, and expansive
+                                        </blockquote>
                                     </div>
                                 </div>
                             </div>
@@ -157,7 +168,8 @@
                                             <li>Digital media, journalism, and creative entrepreneurship</li>
                                         </ul>
                                         <blockquote>
-                                            Education is not preparation for life; education is life itself.<em>John Dewey</em>
+                                           Bold identity form - light grows unique, 
+creative, and self-aware
                                         </blockquote>
                                     </div>
                                 </div>
@@ -175,8 +187,8 @@
                                             <li>Global university admissions support</li>
                                         </ul>
                                         <blockquote>
-                                            Education breeds confidence. Confidence breeds hope. Hope breeds peace.
-                                            <em>Confucius</em>
+                                            Transformation ignites - light 
+questions, explores depth
                                         </blockquote>
                                     </div>
                                 </div>
@@ -193,8 +205,26 @@
                                             <li>Emotional intelligence, life skills, and global citizenship for adulthood</li>
                                         </ul>
                                         <blockquote>
-                                            Education is the most powerful weapon which you can use to change the world.
-                                            <em>Nelson Mandela</em>
+                                            Light stabilizes - self-know-ledge 
+widens, relationships broaden
+                                        </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="container_item" data-item="8">
+                                <div class="d-flex">
+                                    <div class="content-wrapper">
+                                        <h2 class="heading-primary">Boundless Potential, Legacy, and Impact</h2>
+                                        <ul class="primary-list">
+                                            <li>IB DP/CBSE senior years: rigorous, inquiry-driven academics</li>
+                                            <li>University and career readiness: application support, CV building, interview prep</li>
+                                            <li>Personal projects, innovation labs, and global collaborations</li>
+                                            <li>Leadership, legacy projects, and alumni mentorship</li>
+                                            <li>Emotional intelligence, life skills, and global citizenship for adulthood</li>
+                                        </ul>
+                                        <blockquote>
+                                            Light of the world - prespective 
+expands, interconnectedness emerges
                                         </blockquote>
                                     </div>
                                 </div>
@@ -218,35 +248,84 @@
         </div>
     </main>
 
-    <footer class="p-top p-bottom">
+     <footer class="p-top">
         <div class="container">
-            <div class="footer-logo">
-                <img src="images/logo.png" alt="" class="img-flui">
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="footer-logo">
+                        <img src="images/logo.png" alt="" class="img-flui">
+                    </div>
+                    <div class="footer-text">
+                        <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in
+                            nature-rich
+                            spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers
+                            alike.
+                            It’s education that grows with them — relevant, real, and rooted.</p>
+                    </div>
+                    <div class="footer-links">
+                        <ul>
+                            <li><a href="admission.html">Admissions</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <h4 class="footer-widgets">quick links</h4>
+                    <ul class="footer-links">
+                        <li><a href="index.html">home</a></li>
+                        <li><a href="about-us.html">about us</a></li>
+                        <li><a href="program.html">program</a></li>
+                        <li><a href="career.html">career</a></li>
+                        <li><a href="guiding-minds.html">guiding minds</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <ul class="footer-contact">
+                        <li class="footer-contact-item">
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-map-marker-alt"></i>
+                            </span>
+                            <span class="footer-contact-text">Next to Omaxe Palace, Opp. Palassio Mall, Lucknow</span>
+
+                        </li>
+                        <li class="footer-contact-item">
+
+
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-phone"></i> </span>
+                            <span class="footer-contact-text"><a href="tel:+917408405000">+91-740 840
+                                    5000</a></span>
+                        </li>
+                        <li class="footer-contact-item">
+                            <span class="footer-contact-icon">
+                                <i aria-hidden="true" class="fas fa-envelope"></i> </span>
+                            <span class="footer-contact-text"><a
+                                    href="mailto:info@luminaterra.org">info@luminaterra.org</a></span>
+                        </li>
+                    </ul>
+                    <div class="footer-social">
+                        <ul>
+                            <li><a href="" target="_blank" style="--fclr:#557dbc;">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a></li>
+                            <li class="whtap"><a href="https://wa.me/917408405000" target="_blank"
+                                    style="--fclr:#29a71a;">
+                                    <i class="fa-brands fa-whatsapp"></i>
+                                </a></li>
+                            <li><a href="" target="_blank" style="--fclr:#03a9f4;">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a></li>
+                            <li><a href="" target="_blank"
+                                    style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="footer-text">
-                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike. It’s education that grows with them — relevant, real, and rooted.</p>
-            </div>
-            <div class="footer-links">
-                <ul>
-                    <li><a href="admission.html">Admissions</a></li>
-                    <li><a href="contact-us.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-social">
-                 <ul>
-                    <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a></li> -->
-                    <li><a href="https://wa.me/917408405000" target="_blank" style="--fclr:#29a71a;">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a></li>
-                    <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a></li>
-                    <li><a href="" target="_blank" style="--fclr:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a></li> -->
-                </ul>
+        </div>
+        <div class="bottom-footer m-top">
+            <div class="container">
+                <p>© 2025 by Lumina Terra School of Nations | <a href="terms-of-use.html">Terms of Use</a> | <a href="privacy-policy.html">Privacy Policy</a></p>
             </div>
         </div>
     </footer>
